--- a/EclipseProg/Scouthis/res/layout/newsfeed_list_row.xml
+++ b/EclipseProg/Scouthis/res/layout/newsfeed_list_row.xml
@@ -7,31 +7,35 @@
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:orientation="horizontal" >
+         android:orientation="vertical" >
+         
+	    <LinearLayout
+	         android:layout_width="wrap_content"
+	         android:layout_height="wrap_content"
+	         android:orientation="horizontal">
+	         
+	         <ImageView
+	             android:id="@+id/imgRow"
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:layout_gravity="center"
+	             android:layout_marginRight="4dp"
+	             android:layout_marginTop="4dp"
+	             android:src="@android:drawable/btn_default_small" />
 
-         <ImageView
-             android:id="@+id/imgRow"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent"
-             android:src="@android:drawable/btn_default_small" />
-
-         <LinearLayout
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:orientation="vertical">
-
-             <TextView
-                 android:id="@+id/lblRSSItem"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:textSize="24sp" />
-
-             <TextView
-                 android:id="@+id/dscRSSItem"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_below="@+id/lblRSSItem" />
-         </LinearLayout>
+            <TextView
+                android:id="@+id/lblRSSItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp" />
+		
+		</LinearLayout>
+		
+		<TextView
+		    android:id="@+id/dscRSSItem"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginBottom="4dp" />
 
      </LinearLayout>
 
