--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <LinearLayout 
+        android:id="@+id/gps_alert_container"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+	</LinearLayout>
 
     <TextView
         android:id="@+id/lblDescription"
